--- a/Xaminals/MainPage.xaml
+++ b/Xaminals/MainPage.xaml
@@ -21,19 +21,28 @@
                 Grid.Column="1"/>
         <CollectionView Grid.Row="2"
                         Grid.ColumnSpan="2"
-                        ItemsSource="{Binding Items}">
+                        ItemsSource="{Binding Items}"
+                        SelectionMode="None">
 
             <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="{x:Type x:String}">
+                <DataTemplate x:DataType="{x:Type x:String}"
+>
                     <SwipeView>
                         <SwipeView.RightItems>
                             <SwipeItems>
                                 <SwipeItem Text="Delete"
-                                           BackgroundColor="Red"/>
+                                           BackgroundColor="Red"
+                                           Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}},Path=RemoveCommand}"
+                                           CommandParameter="{Binding .}"/>
                             </SwipeItems>
                         </SwipeView.RightItems>
                         <Grid Padding="0.5">
                             <Frame>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                           Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}},Path=TapCommand}"
+                                           CommandParameter="{Binding .}"/>
+                                </Frame.GestureRecognizers>
                                 <Label Text="{Binding .}" 
                                    FontSize="24"/>
                             </Frame>
